# sexec

./: CMakeLists.txt
src/: CMakeLists.txt  fileInterface.cpp  fileInterface.h  log.cpp  log.h  main.cpp  script.cpp  script.h
src/script/: player.cpp  player.h
tests/: main.scr  other.scr
tests/newfolder/: newscript.scr
